Bug 1906974 - Fix stylus eraser and barrel buttons on GTK r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D248967